--- a/.github/workflows/update-chrome-extensions.yaml
+++ b/.github/workflows/update-chrome-extensions.yaml
@@ -54,12 +54,12 @@ jobs:
             list_extensions() {
               local nix_file="$1"
               [ -z "$nix_file" ] && return
-              nix eval --json --impure --expr "map (x: x.id) (import \"$nix_file\" { pkgs = {}; config = { catppuccin.enable = false; }; lib = import <nixpkgs/lib>; })" 2>/dev/null | jq -r '.[]' | sort -u
+              nix eval --json --impure --expr "with import <nixpkgs> {}; map (x: x.id) (import \"$nix_file\" { inherit pkgs lib; config = { catppuccin.enable = false; }; })" 2>/dev/null | jq -r '.[]' | sort -u
             }
 
             get_ext_version() {
               local nix_file="$1" id="$2"
-              nix eval --json --impure --expr "(builtins.head (builtins.filter (x: x.id == \"$id\") (import \"$nix_file\" { pkgs = {}; config = { catppuccin.enable = false; }; lib = import <nixpkgs/lib>; }))).version" 2>/dev/null | jq -r '.'
+              nix eval --json --impure --expr "with import <nixpkgs> {}; (builtins.head (builtins.filter (x: x.id == \"$id\") (import \"$nix_file\" { inherit pkgs lib; config = { catppuccin.enable = false; }; }))).version" 2>/dev/null | jq -r '.'
             }
 
             analyze_file_changes() {
@@ -128,8 +128,10 @@ jobs:
               head_content=$(git show HEAD:"$nix_file" 2>/dev/null || true)
 
               file_changes=$(analyze_file_changes "$nix_file" "$staged_content" "$head_content")
-              [ -n "$file_changes" ] && CHANGES_DETAIL="${CHANGES_DETAIL}${file_changes}"
-            done <<< "$(git diff --staged --name-only | grep -E 'extensions\.nix$' || true)"
+              if [ -n "$file_changes" ]; then
+                CHANGES_DETAIL="${CHANGES_DETAIL}${file_changes}"$'\n'
+              fi
+            done <<< "$(git diff --staged --name-only | grep -E 'extensions\.nix$' | sort || true)"
 
             {
               echo "changes_summary<<EOF"
